fixes related to padding and alignment on different pages

--- a/bulma-custom.scss
+++ b/bulma-custom.scss
@@ -19,4 +19,6 @@ $fs-normal: 0.9rem;
   $modal-card-head-padding: 20px,
   $modal-card-head-background-color: #f5f5f5,
   $modal-card-head-radius: $radius-medium,
+  $modal-card-foot-radius: $radius-medium,
+  $modal-card-body-padding: 20px,
   $button-weight: $fw-400);
